# devil

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CONTEXT_MANAGEMENT_COMPLETE.md  Cargo.toml  INTEGRATION.md  LAB_MANUAL.md  PERMISSION_SYSTEM_COMPLETE.md  README.md  SETTINGS_SYSTEM_COMPLETE.md  USER_MANUAL.md
.monkeycode/: MEMORY.md
.monkeycode/docs/: SPEC_DEPENDENCIES.md  architecture.md  claude-code-tool-comparison.md  coordinator-system.md  crates.md  getting-started.md  hook-system.md  permission-guide.md  permission-implementation.md  permission-system.md  settings-system.md  skills-plugins-system.md  subagent-system.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
crates/agent/: Cargo.toml  build.rs
crates/agent/.claude/: permissions.toml
crates/agent/bundled-skills/debug/: SKILL.md
crates/agent/bundled-skills/simplify/: SKILL.md
crates/agent/bundled-skills/verify/: SKILL.md
crates/agent/examples/: SKILL_INTEGRATION_GUIDE.md  skill-system-demo.rs
crates/agent/src/: config.rs  context.rs  core.rs  deps.rs  lib.rs  mcp_integration.rs  message.rs  prompts.rs  state.rs  tools.rs
crates/agent/src/commands/: advanced.rs  cmd_trait.rs  collaboration.rs  config.rs  core.rs  edit.rs  mod.rs  registry.rs  system.rs  tests.rs
crates/agent/src/commands/advanced/: coordinator.rs  desktop.rs  diff.rs  fast.rs  hooks.rs  mcp.rs  memory.rs  permissions.rs  plan.rs  review.rs  share.rs  skills.rs  stickers.rs  tasks.rs  upgrade.rs  voice.rs
crates/agent/src/commands/collaboration/: advisor.rs  agents.rs  attach.rs  btw.rs  buddy.rs  chrome.rs  ctx_viz.rs  feedback.rs  good_claude.rs  issue.rs  mobile.rs  onboarding.rs  peers.rs  pipes.rs  poor.rs  pr_comments.rs  release_notes.rs  send.rs  stats.rs  status.rs  workflows.rs
crates/agent/src/commands/config/: config.rs  login.rs  logout.rs  theme.rs
crates/agent/src/commands/core/: clear.rs  compact.rs  cost.rs  doctor.rs  exit.rs  help.rs  model.rs  resume.rs
crates/agent/src/commands/edit/: add_dir.rs  autofix_pr.rs  bughunter.rs  context.rs  copy.rs  effort.rs  env.rs  files.rs  ide.rs  passes.rs  rename.rs  rewind.rs  src.rs  summary.rs  tag.rs  terminal_setup.rs  thinkback.rs  vim.rs
crates/agent/src/commands/system/: ant_trace.rs  backfill_sessions.rs  branch.rs  break_cache.rs  bridge.rs  claim_main.rs  color.rs  debug_tool_call.rs  detach.rs  extra_usage.rs  heapdump.rs  history.rs  install_github_app.rs  keybindings.rs  mock_limits.rs  oauth_refresh.rs  output_style.rs  perf_issue.rs  plugin.rs  privacy_settings.rs  rate_limit_options.rs  reload_plugins.rs  remote_env.rs  remote_setup.rs  reset_limits.rs  sandbox_toggle.rs  session.rs  teleport.rs  usage.rs
crates/agent/src/context/: circuit_breaker.rs  compression.rs  context_window.rs  git_status.rs  memory_files.rs  mod.rs  system_context.rs  token_budget.rs  user_context.rs
crates/agent/src/context/memory/: dir.rs  index.rs  mod.rs  prompts.rs  truncation.rs  types.rs
crates/agent/src/coordinator/: mod.rs  mode_detection.rs  orchestration.rs  system_prompt.rs  types.rs  worker_agent.rs
crates/agent/src/hooks/: events.rs  executor.rs  matcher.rs  mod.rs  registry.rs  response.rs  security.rs  types.rs
crates/agent/src/hooks/builtin/: mod.rs
crates/agent/src/permissions/: bash_analyzer.rs  context.rs  mod.rs  pipeline.rs  prompts.rs  store.rs
crates/agent/src/plugins/: loader.rs  mod.rs  types.rs
crates/agent/src/settings/: config.rs  feature_flags.rs  mod.rs  settings.rs  store.rs
crates/agent/src/skills/: executor.rs  loader.rs  mod.rs  permissions.rs  types.rs
crates/agent/src/subagent/: context_inheritance.rs  executor.rs  mod.rs  recursion_guard.rs  registry.rs  types.rs
crates/agent/src/tools/: bash_analyzer.rs  build_tool.rs  builtin.rs  executor.rs  partition.rs  registry.rs  tool.rs
crates/agent/src/tools/ask/: mod.rs  read_multiple.rs  write_diff.rs
crates/agent/src/tools/config/: brief.rs  ctx_inspect.rs  mod.rs
crates/agent/src/tools/cron/: exports.rs  mod.rs
crates/agent/src/tools/enhanced/: mod.rs  monitor.rs  push_notification.rs  remote_trigger.rs  review_artifact.rs  sleep.rs  snip.rs  subscribe_pr.rs  suggest_background_pr.rs  synthetic_output.rs  terminal_capture.rs  tool_search.rs
crates/agent/src/tools/file_tools/: mod.rs  notebook.rs  notebook_types.rs  powershell.rs  repl.rs
crates/agent/src/tools/lsp/: mod.rs
crates/agent/src/tools/mcp/: auth.rs  list_resources.rs  mcp_tool.rs  mod.rs  read_resource.rs
crates/agent/src/tools/planning/: enter_plan_mode.rs  exit_plan_mode.rs  mod.rs  state.rs
crates/agent/src/tools/skills/: discover.rs  mod.rs  skill_tool.rs
crates/agent/src/tools/task/: create.rs  get.rs  list.rs  mod.rs  output.rs  scheduler.rs  stop.rs  update.rs
crates/agent/src/tools/team/: mod.rs
crates/agent/src/tools/web/: browser.rs  mod.rs
crates/agent/src/tools/workflow/: mod.rs
crates/agent/src/tools/worktree/: enter.rs  exit.rs  mod.rs
crates/agent/tests/: tools_test.rs
crates/channels/: Cargo.toml
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: connection_manager.rs  control_protocol.rs  lib.rs  permissions.rs  tool_discovery.rs  types.rs
crates/mcp/src/bridge/: dedup.rs  message_router.rs  mod.rs
crates/mcp/src/transports/: http_polling.rs  mod.rs  sdk.rs  stdio.rs  streamable_http.rs  websocket.rs
crates/mcp/tests/: integration_test.rs
crates/memory/: Cargo.toml
crates/plugins/: Cargo.toml
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  lib.rs  openai.rs
crates/streaming/: Cargo.toml
crates/streaming/src/: anthropic_deps.rs  cache_optimizer.rs  cost_tracking.rs  forked_agent.rs  lib.rs  prefetch.rs  query_engine.rs  streaming_tool_executor.rs
crates/streaming/src/mcp_integration/: mod.rs
crates/streaming/tests/: integration_test.rs
src/: cli.rs  config.rs  main.rs
src/cli/: error.rs  (+3 more)
(+67 files in other folders)
