[workspace]
resolver = "2"
members = [
    "crates/channels",
    "crates/agent",
    "crates/memory",
    "crates/plugins",
    "crates/gateway",
    "crates/providers",
    "crates/mcp",
    "crates/streaming",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

# 主程序包
[package]
name = "devil-agent"
version.workspace = true
edition.workspace = true
description = "Devil Agent - 智能开发助手"

[[bin]]
name = "devil"
path = "src/main.rs"

[dependencies]
devil-agent-core = { package = "agent", path = "crates/agent" }
devil-streaming = { path = "crates/streaming" }
devil-mcp = { path = "crates/mcp" }
providers = { path = "crates/providers" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
dotenv = "0.15"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.14", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
futures-util = "0.3"
dashmap = "5"
