[workspace]
resolver = "2"
members = [
    "crates/channels",
    "crates/agent",
    "crates/memory",
    "crates/plugins",
    "crates/gateway",
    "crates/providers",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
chrono = "0.4"
reqwest = { version = "0.11.14", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
futures-util = "0.3"
glob = "0.3"
walkdir = "2"
serde_yaml = "0.9"
urlencoding = "2"
toml = "0.8"
dirs = "5"
