[package]
name = "agent"
version.workspace = true
edition.workspace = true

[dependencies]
channels = { path = "../channels" }
memory = { path = "../memory" }
plugins = { path = "../plugins" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
lazy_static = "1.4"
regex = "1"
thiserror.workspace = true
serde_yaml = "0.9"
glob = "0.3"
walkdir = "2"
futures = { workspace = true }

[dev-dependencies]
tempfile = "3"
