[package]
name = "agent"
version.workspace = true
edition.workspace = true

[dependencies]
channels = { path = "../channels" }
memory = { path = "../memory" }
plugins = { path = "../plugins" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid = { version = "1", features = ["v4"] }
reqwest = { workspace = true, features = ["json"] }
lazy_static = "1.4"
regex = "1"
glob = { workspace = true }
walkdir = { workspace = true }
serde_yaml = { workspace = true }
urlencoding = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3"
