[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[dependencies]
channels = { path = "../channels" }
agent = { path = "../agent" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
reqwest.workspace = true
