[package]
name = "providers"
version.workspace = true
edition = "2021"

[dependencies]
plugins = { path = "../plugins" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest = { workspace = true, features = ["json"] }
futures = { workspace = true }
futures-util = { workspace = true }
