[package]
name = "devil-streaming"
version = "0.1.0"
edition = "2021"
description = "流式处理架构与性能优化模块 (第 13 章)"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
